# edge-sensor-gateway

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: sensors.example.yaml
docs/: architecture.md  test_plan.md
src/edge_sensor_gateway/: config.py  main.py
src/edge_sensor_gateway/alarms/: engine.py
src/edge_sensor_gateway/api/: app.py  websocket.py
src/edge_sensor_gateway/core/: models.py
src/edge_sensor_gateway/gateway/: broadcaster.py  service.py
src/edge_sensor_gateway/mqtt/: publisher.py  topics.py
src/edge_sensor_gateway/sensors/: base.py  distance.py  factory.py  temperature.py  vibration.py
src/edge_sensor_gateway/storage/: memory.py
tests/: test_alarm_engine.py  test_api.py  test_config.py
